--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version"      : "0.0.1",
   "description"  : "Scrape le web.",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/api.js"
   },
   "author"       : "Scotch",
   "dependencies" : {
@@ -13,6 +13,7 @@
     "url"        : "latest",
     "body-parser": "~1.13.2",
     "cookie-parser":"~1.3.5",
+    "ejs": "~2.3.3",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
